welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: value update is not a member of Unit
  if (vuBiscuit() =false)
      ^Program:4: error: value update is not a member of Unit
  if (vuBiscuit()=true)
      ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit()=true)
  ^Program:25: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return (false);
            ^Program:25: warning: enclosing method vuBiscuit has result type Unit: return value discarded
    return (false);
    ^Program:27: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return (true)
              ^Program:27: warning: enclosing method vuBiscuit has result type Unit: return value discarded
      return (true)
      ^